--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -98,24 +98,20 @@ jobs:
           unzip -j adempiere_patch_zk.war -d docker/jetty/zk-ui/lib WEB-INF/lib/*.jar
 
       # install the doctl on the runner
-      - name: Install doctl                 
-        uses: digitalocean/action-doctl@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-            token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-      #Build Image    
-      - name: Build image
-        run: |
-          docker buildx create --use
-          doctl registry login
-          echo "Build ADempiere ZK Jetty Docker Image"
-          docker buildx build \
-          -t registry.digitalocean.com/erpya/adempiere-zk:${{ github.event.release.tag_name }} \
-          -t registry.digitalocean.com/erpya/adempiere-zk:${{ github.event.release.tag_name }}-jetty \
-          -t registry.digitalocean.com/erpya/adempiere-zk:latest \
-          --push --squash --platform linux/amd64,linux/amd64/v2,linux/arm64/v8 --file docker/jetty/Dockerfile .
-          echo "Build ADempiere ZK Jetty Docker Image Alpine"
-          docker buildx build \
-          -t registry.digitalocean.com/erpya/adempiere-zk:${{ github.event.release.tag_name }}-jetty-alpine \
-          --push --squash --platform linux/amd64,linux/amd64/v2 --file docker/jetty/Dockerfile.alpine .
+          # CONFIGURE DOCKER SECRETS INTO REPOSITORY
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Push image in Docker Hub
+        uses: docker/build-push-action@v4.0.0
+        with:
+          context: .
+          file: docker/jetty/Dockerfile
+          platforms: linux/amd64,linux/amd64/v2,linux/arm64/v8
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_REPO_ADEMPIERE_ZK }}:jetty-${{ github.event.release.tag_name }}
+            ${{ secrets.DOCKER_REPO_ADEMPIERE_ZK }}:jetty
       
