--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.4.0'
 }
 */
-rootProject.name = 'adempiere_patch_zk'
+rootProject.name = 'shw-zk-customizations'
 
