--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,30 +60,27 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    # steps:
-    #   - name: Download all artifacts
-    #     uses: actions/download-artifact@v3
+    steps:
+      - name: Download build war app
+        uses: actions/download-artifact@v3
+        with:
+          name: shw-zk-customizations.war
 
-    #   - name: Upload zip
-    #     uses: skx/github-action-publish-binaries@master
-    #     env:
-    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #     with:
-    #       args: shw-zk-customizations.war/shw-zk-customizations.war
+      - name: Upload zip
+        uses: skx/github-action-publish-binaries@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: shw-zk-customizations.war
   
   # Docker Build 
   build-publish-docker:
     name: Build and Publish Docker Images
-    needs: publish-binaries
+    needs: build-app
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-
-#      - name: Install buildx
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install -y docker-buildx
 
       - name: Download build war app
         uses: actions/download-artifact@v3
