--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,25 +53,25 @@ jobs:
           path: build/release/shw-zk-customizations.war
 
   # Publish Binaries
-  publish-binaries:
-    name: Upload Binaries adempiere-zk
-    needs: build-app
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  # publish-binaries:
+  #   name: Upload Binaries adempiere-zk
+  #   needs: build-app
+  #   # The type of runner that the job will run on
+  #   runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - name: Download build war app
-        uses: actions/download-artifact@v3
-        with:
-          name: shw-zk-customizations.war
+  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  #   steps:
+  #     - name: Download build war app
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         name: shw-zk-customizations.war
 
-      - name: Upload zip
-        uses: skx/github-action-publish-binaries@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          args: shw-zk-customizations.war
+  #     - name: Upload zip
+  #       uses: skx/github-action-publish-binaries@master
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         args: shw-zk-customizations.war
   
   # Docker Build 
   build-publish-docker:
@@ -95,14 +95,21 @@ jobs:
           unzip -j shw-zk-customizations.war -d docker/jetty/zk-ui/lib WEB-INF/lib/*.jar
 
       # install the doctl on the runner
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           # CONFIGURE DOCKER SECRETS INTO REPOSITORY
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
+  
       - name: Push image in Docker Hub
-        uses: docker/build-push-action@v4.0.0
+        uses: docker/build-push-action@v4
         with:
           context: .
           file: docker/jetty/Dockerfile
