--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -107,7 +107,10 @@ jobs:
           # CONFIGURE DOCKER SECRETS INTO REPOSITORY
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-  
+      - name: test
+        run: |
+          ls docker/jetty/zk-ui/
+          ls docker/jetty/zk-ui/lib
       - name: Push image in Docker Hub
         uses: docker/build-push-action@v4
         with:
