--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,14 @@ repositories {
             password = System.getenv("GITHUB_DEPLOY_TOKEN") ?: System.properties['deploy.token'] 
 		}
 	}
+	// ERP Repos
+    maven {
+    	url = "https://maven.pkg.github.com/erpya/Repository"
+        credentials {
+        	username = System.getenv("GITHUB_DEPLOY_USER") ?: System.properties['deploy.user']
+            password = System.getenv("GITHUB_DEPLOY_TOKEN") ?: System.properties['deploy.token'] 
+		}
+    }
 }
 
 sourceCompatibility = 1.11
