--- a/build.gradle
+++ b/build.gradle
@@ -20,16 +20,16 @@ repositories {
     maven {
     	url = "https://maven.pkg.github.com/Systemhaus-Westfalia/adempiere-shw"
         credentials {
-        	username = System.getenv("GITHUB_DEPLOY_USER") ?: System.properties['deploy.user']
-            password = System.getenv("GITHUB_DEPLOY_TOKEN") ?: System.properties['deploy.token'] 
+        	username = findProperty("deployUsername") ?: System.properties['deploy.user']
+            password = findProperty("deployToken") ?: System.properties['deploy.token'] 
 		}
 	}
 	// ERP Repos
     maven {
     	url = "https://maven.pkg.github.com/erpya/Repository"
         credentials {
-        	username = System.getenv("GITHUB_DEPLOY_USER") ?: System.properties['deploy.user']
-            password = System.getenv("GITHUB_DEPLOY_TOKEN") ?: System.properties['deploy.token'] 
+        	username = findProperty("deployUsername") ?: System.properties['deploy.user']
+            password = findProperty("deployToken") ?: System.properties['deploy.token'] 
 		}
     }
 }
